--- a/Trabalho Chat (WS)/front/css/style.css
+++ b/Trabalho Chat (WS)/front/css/style.css
@@ -34,8 +34,8 @@ body {
 
 .login > h2 {
   text-align: center;
-  font-weight: 600;
-  font-size: 1.5rem;
+  font-weight: 800;
+  font-size: 16px;
   margin-bottom: 20px;
 }
 
@@ -66,7 +66,7 @@ body {
   border-radius: 6px;
   font-size: 0.85rem;
   font-weight: 700;
-  background-color: #a9b1e0;
+  background-color: #f2f2f2;
   cursor: pointer;
   color: #14151a;
 }
@@ -143,7 +143,7 @@ body {
   display: inline-block; /* teste */
   width: 100%; /* teste */
   background-color: #005c4b;
-  color: #121212;
+  color: #fff;
   border-radius: 10px 10px 0 10px;
   align-self: flex-end;
 }
